tailwind/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailwindweb
spec:
  replicas: 5
  selector:
    matchLabels:
      app: tailwindweb
  template:
    metadata:
      labels:
        app: tailwindweb
    spec:
      containers:
        - name: tailwindweb
          image: tailwindtraders/cart.api:latest
          ports:
            - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: tailwindweb
spec:
  type: NodePort
  selector:
    app: tailwindweb
  ports:
    - port: 3001
      targetPort: 3001
