tailwind/coupon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon
spec:
  replicas: 5
  selector:
    matchLabels:
      app: coupon
  template:
    metadata:
      labels:
        app: coupon
    spec:
      containers:
        - name: coupon
          image: tailwindtraders/coupon.api:latest
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: coupon
spec:
  type: NodePort
  selector:
    app: coupon
  ports:
    - port: 3000
      targetPort: 3000
