tailwind/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image
spec:
  replicas: 5
  selector:
    matchLabels:
      app: image
  template:
    metadata:
      labels:
        app: image
    spec:
      containers:
        - name: image
          image: msfttailwindtraders/image-classifier.api:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: image
spec:
  type: ClusterIP
  selector:
    app: image
  ports:
    - port: 80
      targetPort: 80
