tailwind/login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
spec:
  replicas: 5
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
        - name: login
          login: tailwindtraders/login.api:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: login
spec:
  type: NodePort
  selector:
    app: login
  ports:
    - name: port80
      port: 80
      targetPort: 80
    - name: port443
      port: 443
      targetPort: 443
