tailwind/mobile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile
spec:
  replicas: 5
  selector:
    matchLabels:
      app: mobile
  template:
    metadata:
      labels:
        app: mobile
    spec:
      containers:
        - name: mobile
          mobile: tailwindtraders/mobileapigw:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: mobile
spec:
  type: NodePort
  selector:
    app: mobile
  ports:
    - name: port80
      port: 80
      targetPort: 80
    - name: port443
      port: 443
      targetPort: 443
