tailwind/prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod
spec:
  replicas: 5
  selector:
    matchLabels:
      app: prod
  template:
    metadata:
      labels:
        app: prod
    spec:
      containers:
        - name: prod
          prod: msfttailwindtraders/product.api:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: prod
spec:
  type: ClusterIP
  selector:
    app: prod
  ports:
    - name: port80
      port: 80
      targetPort: 80
    - name: port443
      port: 443
      targetPort: 443
