tailwind/profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
spec:
  replicas: 5
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
        - name: profile
          image: tailwindtraders/profile.api:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: profile
spec:
  type: NodePort
  selector:
    app: profile
  ports:
    - port: 80
      targetPort: 80
