tailwind/stocks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stocks
spec:
  replicas: 5
  selector:
    matchLabels:
      app: stocks
  template:
    metadata:
      labels:
        app: stocks
    spec:
      containers:
        - name: stocks
          image: tailwindtraders/stocks.api:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: stocks
spec:
  type: NodePort
  selector:
    app: stocks
  ports:
    - port: 8080
      targetPort: 8080
