tailwind/tail-webapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
spec:
  replicas: 5
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
        - name: webapi
          webapi: msfttailwindtraders/webapigw:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: webapi
spec:
  type: ClusterIP
  selector:
    app: webapi
  ports:
    - name: port80
      port: 80
      targetPort: 80
    - name: port443
      port: 443
      targetPort: 443
