tailwind/ingress-controller.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress-tail
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
  namespace: ingress-nginx  
spec:
  ingressClassName: nginx
  tls: 
    - hosts: 
        - tailwindtraders.cloudns.biz
      secretName: tailwind-secret
  rules:
  - host: tailwindtraders.cloudns.biz
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: tailwindweb
              port:
                number: 80
