tailwind/tail-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailwindweb
spec:
  replicas: 5
  selector:
    matchLabels:
      app: tailwindweb
  template:
    metadata:
      labels:
        app: tailwindweb
    spec:
      containers:
        - name: tailwindweb
          image: noknok79/tailwintradersweb:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: tailwindweb
spec:
  type: LoadBalancer
  selector:
    app: tailwindweb
  ports:
    - port: 80
      targetPort: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress-tailwind
spec:
  ingressClassName: nginx
  tls: 
    - 
      hosts: 
        - tailwindtraders.cloudns.biz
      secretName: tailwind-secret
  rules:
  - host: tailwindtraders.cloudns.biz
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: tailwindweb
              port:
                number: 80
